--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body{
   margin:0;
   background:#ffffff;
   font-family: Arial, Helvetica, sans-serif;
+  color:#111;
 }
 
 .wrap{
@@ -17,14 +18,12 @@ body{
   text-align:center;
 }
 
-/* 제목 */
 .title{
   font-size:22px;
   font-weight:700;
   margin:20px 0 12px;
 }
 
-/* 카드 */
 .card{
   width:1024px;
   height:768px;
@@ -36,7 +35,6 @@ body{
   background:#fff;
 }
 
-/* 레이어 */
 .layer{
   position:absolute;
   inset:0;
@@ -52,7 +50,6 @@ body{
   left:50%;
   transform:translateX(-50%);
   user-select:none;
-  -webkit-user-drag:none;
   pointer-events:none;
 }
 
@@ -62,11 +59,9 @@ body{
   object-fit:contain;
   display:none;
   user-select:none;
-  -webkit-user-drag:none;
   pointer-events:none;
 }
 
-/* UI */
 .ui{
   width:1024px;
   max-width:92vw;
@@ -74,10 +69,9 @@ body{
 }
 
 .timer{
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: ui-monospace, monospace;
   font-size:48px;
   display:none;
-  letter-spacing:2px;
 }
 
 .answerRow{
@@ -91,7 +85,6 @@ input{
   font-size:18px;
   width:260px;
   text-align:center;
-  box-sizing:border-box;
 }
 
 .controls{
@@ -109,7 +102,6 @@ button{
   padding:12px;
   font-size:16px;
   cursor:pointer;
-  box-sizing:border-box;
 }
 button:active{ transform: translateY(1px); }
 </style>
@@ -121,18 +113,15 @@ button:active{ transform: translateY(1px); }
   <div class="title">ZOMBIE CITY4</div>
 
   <div class="card">
-    <!-- city -->
-    <div class="layer"><img id="cityImg" src=""></div>
-    <!-- zombie overlay -->
-    <div class="layer"><img id="zombieImg" src=""></div>
-    <!-- puzzle overlay -->
-    <div class="layer"><img id="puzzleImg" src=""></div>
+    <div class="layer"><img id="cityImg"></div>
+    <div class="layer"><img id="zombieImg"></div>
+    <div class="layer"><img id="puzzleImg"></div>
   </div>
 
   <div class="ui">
     <div id="timer" class="timer">15</div>
     <div id="answerRow" class="answerRow">
-      <input id="answerInput" placeholder="ANSWER" autocomplete="off" spellcheck="false">
+      <input id="answerInput" placeholder="ANSWER">
       <div>ENTER 누르기</div>
     </div>
   </div>
@@ -142,28 +131,29 @@ button:active{ transform: translateY(1px); }
     <button onclick="location.href='index.html'">메뉴</button>
   </div>
 
+  <!-- ✅ 랜덤 좀비 그로울 사운드 -->
+  <audio id="groan"></audio>
+  <!-- ✅ 실패 사운드 -->
+  <audio id="scratch" src="static/scratch.mp3" preload="auto"></audio>
+
 </div>
 
 <script>
-/*********************************************************
- * ✅ 파일 목록
- *********************************************************/
-const cityImages = Array.from({length:5},(_,i)=>`static/city${i+1}.png`);
+/* ---------- 이미지 ---------- */
+const cityImages   = Array.from({length:5},(_,i)=>`static/city${i+1}.png`);
 const zombieImages = Array.from({length:5},(_,i)=>`static/zombie${i+1}.png`);
 
-/*********************************************************
- * ✅ 퍼즐(4-n 구조): 여기만 추가/수정하면 됨
- * - puzzle4-1.png, puzzle4-2.png, puzzle4-3.png ... 형태
- *********************************************************/
+/* ---------- 사운드 ---------- */
+const groanSounds = Array.from({length:9},(_,i)=>`static/groan${i+1}.mp3`);
+
+/* ---------- 퍼즐 ---------- */
 const puzzles = [
   { img:"static/puzzle4-1.png", answer:"4" },
   { img:"static/puzzle4-2.png", answer:"SAFE" },
-  { img:"static/puzzle4-3.png", answer:"푶픂" }
+  { img:"static/puzzle4-3.png", answer:"픂푶" }
 ];
 
-/*********************************************************
- * ✅ 요소
- *********************************************************/
+/* ---------- 요소 ---------- */
 const cityImg = document.getElementById("cityImg");
 const zombieImg = document.getElementById("zombieImg");
 const puzzleImg = document.getElementById("puzzleImg");
@@ -171,139 +161,114 @@ const timerEl = document.getElementById("timer");
 const answerRow = document.getElementById("answerRow");
 const answerInput = document.getElementById("answerInput");
 
-/*********************************************************
- * ✅ 상태
- *********************************************************/
-let puzzleIndex = 0;
-let cityMove = true;
-let rafId = null;
-let countdownId = null;
-let zombieTimeoutId = null;
-let overlayTimeoutId = null;
-let phase = "CITY"; // CITY | ZOMBIE | PUZZLE | RESULT
+const groanEl = document.getElementById("groan");
+const scratchEl = document.getElementById("scratch");
 
-/*********************************************************
- * ✅ 유틸
- *********************************************************/
+/* ---------- 유틸 ---------- */
 const rand = arr => arr[Math.floor(Math.random()*arr.length)];
 
-function resetUI(){
+function playSound(el, src){
+  try{
+    if(src) el.src = src;
+    el.pause();
+    el.currentTime = 0;
+    el.play();
+  }catch(e){}
+}
+
+function warmUp(el, src){
+  try{
+    el.src = src;
+    el.muted = true;
+    el.play();
+    el.pause();
+    el.currentTime = 0;
+    el.muted = false;
+  }catch(e){}
+}
+
+/* ---------- 상태 ---------- */
+let puzzleIndex = 0;
+let phase = "CITY";
+let rafId = null;
+let countdownId = null;
+let audioReady = false;
+
+/* ---------- 타이밍 (랜덤 겹침 방지 구조 유지) ---------- */
+const CYCLE_MS = 80000;
+const SLOT_MS  = 15000;
+const GUARD_MS = 5000;
+const PAGE_ID = 1;
+const SLOT_START_MS = (PAGE_ID - 1) * (SLOT_MS + GUARD_MS);
+
+function seededRandom01(cycleIndex){
+  let x = (cycleIndex + 1) * 1103515245 + PAGE_ID * 12345;
+  x ^= x >>> 16;
+  return (x >>> 0) / 4294967295;
+}
+
+function scheduleZombie(){
+  if(phase !== "CITY") return;
+  const now = Date.now();
+  const cycle = Math.floor(now / CYCLE_MS);
+  const inCycle = now % CYCLE_MS;
+
+  const r = seededRandom01(cycle);
+  const target = SLOT_START_MS + GUARD_MS + r * (SLOT_MS - GUARD_MS*2);
+  let wait = target - inCycle;
+  if(wait < 0) wait += CYCLE_MS;
+
+  setTimeout(()=>{ if(phase==="CITY") showZombie(); }, wait);
+}
+
+/* ---------- CITY ---------- */
+function startCity(){
+  phase = "CITY";
   zombieImg.style.display = "none";
   puzzleImg.style.display = "none";
   timerEl.style.display = "none";
   answerRow.style.display = "none";
-  answerInput.value = "";
-}
 
-function stopAllTimers(){
-  if(rafId) cancelAnimationFrame(rafId);
-  rafId = null;
-
-  if(countdownId) clearInterval(countdownId);
-  countdownId = null;
-
-  if(zombieTimeoutId) clearTimeout(zombieTimeoutId);
-  zombieTimeoutId = null;
-
-  if(overlayTimeoutId) clearTimeout(overlayTimeoutId);
-  overlayTimeoutId = null;
-}
-
-function setTimerDisplay(sec){
-  timerEl.textContent = String(sec).padStart(2,"0");
-}
-
-/*********************************************************
- * ✅ 여러 기기 동시 실행 시, "좀비 등장 겹침 방지" 스케줄
- *********************************************************/
-const CYCLE_MS = 80000;
-const SLOT_MS  = 15000;
-const GUARD_MS = 5000;
-
-
-/* page4 = 4 */
-const PAGE_ID = 4;
-const SLOT_START_MS = (PAGE_ID - 1) * (SLOT_MS + GUARD_MS); // page4=45000ms
-
-function seededRandom01(cycleIndex, pageId){
-  let x = (cycleIndex + 1) * 1103515245 + pageId * 12345;
-  x = (x ^ (x >>> 16)) >>> 0;
-  return (x % 100000) / 100000;
-}
-
-function scheduleZombieNoOverlap(){
-  if(phase !== "CITY") return;
-
-  const now = Date.now();
-  const cycleIndex = Math.floor(now / CYCLE_MS);
-  const inCycle = now % CYCLE_MS;
-
-  const r = seededRandom01(cycleIndex, PAGE_ID);
-  const targetInCycle =
-    SLOT_START_MS + GUARD_MS + r * (SLOT_MS - GUARD_MS * 2);
-
-  let wait = targetInCycle - inCycle;
-  if(wait < 0) wait += CYCLE_MS;
-
-  zombieTimeoutId = setTimeout(() => {
-    if(phase === "CITY") showZombie();
-  }, wait);
-}
-
-/*********************************************************
- * ✅ CITY 시작/재시작
- *********************************************************/
-function startCity(){
-  stopAllTimers();
-  resetUI();
-
-  phase = "CITY";
-  cityMove = true;
+  if(!audioReady){
+    warmUp(groanEl, groanSounds[0]);
+    warmUp(scratchEl, "static/scratch.mp3");
+    audioReady = true;
+  }
 
   cityImg.src = rand(cityImages);
 
   const t0 = performance.now();
-  function tick(t){
-    if(!cityMove || phase !== "CITY") return;
-    const x = Math.sin((t - t0)/1000 * 0.6) * 30;
+  function move(t){
+    if(phase!=="CITY") return;
+    const x = Math.sin((t-t0)/1000*0.6)*30;
     cityImg.style.transform = `translateX(calc(-50% + ${x}px)) scale(1.1)`;
-    rafId = requestAnimationFrame(tick);
+    rafId = requestAnimationFrame(move);
   }
-  rafId = requestAnimationFrame(tick);
+  rafId = requestAnimationFrame(move);
 
-  scheduleZombieNoOverlap();
+  scheduleZombie();
 }
 
-/*********************************************************
- * ✅ ZOMBIE 등장
- *********************************************************/
+/* ---------- ZOMBIE ---------- */
 function showZombie(){
-  if(phase !== "CITY") return;
-
   phase = "ZOMBIE";
-  cityMove = false;
   if(rafId) cancelAnimationFrame(rafId);
-  rafId = null;
 
   zombieImg.src = rand(zombieImages);
   zombieImg.style.display = "block";
 
-  overlayTimeoutId = setTimeout(() => {
-    startPuzzle();
-  }, 2000);
+  /* ✅ 랜덤 groan 사운드 */
+  playSound(groanEl, rand(groanSounds));
+
+  setTimeout(startPuzzle, 2000);
 }
 
-/*********************************************************
- * ✅ PUZZLE
- *********************************************************/
+/* ---------- PUZZLE ---------- */
 function startPuzzle(){
-  if(phase !== "ZOMBIE") return;
-
+  phase = "PUZZLE";
   if(puzzleIndex >= puzzles.length) puzzleIndex = 0;
 
-  phase = "PUZZLE";
   const p = puzzles[puzzleIndex];
-
   puzzleImg.src = p.img;
   puzzleImg.style.display = "block";
 
@@ -313,84 +278,49 @@ function startPuzzle(){
   answerInput.focus();
 
   let left = 20;
-  setTimerDisplay(left);
+  timerEl.textContent = left;
 
-  countdownId = setInterval(() => {
-    left -= 1;
-    setTimerDisplay(Math.max(0,left));
-    if(left <= 0){
+  countdownId = setInterval(()=>{
+    left--;
+    timerEl.textContent = left;
+    if(left<=0){
       clearInterval(countdownId);
-      countdownId = null;
       fail();
     }
-  }, 1000);
+  },1000);
 }
 
-/*********************************************************
- * ✅ 결과 처리
- *********************************************************/
+/* ---------- 결과 ---------- */
 function success(){
-  if(phase !== "PUZZLE") return;
-
   phase = "RESULT";
-  if(countdownId) clearInterval(countdownId);
-  countdownId = null;
-
-  timerEl.style.display = "none";
-  answerRow.style.display = "none";
-
+  clearInterval(countdownId);
   puzzleImg.src = "static/success.png";
-  puzzleIndex += 1;
-
-  overlayTimeoutId = setTimeout(() => {
-    startCity();
-  }, 3000);
+  puzzleIndex++;
+  setTimeout(startCity,3000);
 }
 
 function fail(){
-  if(phase !== "PUZZLE") return;
-
   phase = "RESULT";
-  if(countdownId) clearInterval(countdownId);
-  countdownId = null;
-
-  timerEl.style.display = "none";
-  answerRow.style.display = "none";
-
+  clearInterval(countdownId);
   puzzleImg.src = "static/fail.png";
-  puzzleIndex += 1;
-
-  overlayTimeoutId = setTimeout(() => {
-    startCity();
-  }, 3000);
+  playSound(scratchEl);
+  puzzleIndex++;
+  setTimeout(startCity,3000);
 }
 
-/*********************************************************
- * ✅ 입력 처리
- *********************************************************/
-answerInput.addEventListener("input", () => {
-  answerInput.value = (answerInput.value || "").toUpperCase();
+/* ---------- 입력 ---------- */
+answerInput.addEventListener("input",()=>{
+  answerInput.value = answerInput.value.toUpperCase();
 });
-
-answerInput.addEventListener("keydown", (e) => {
-  if(e.key === "Enter"){
-    e.preventDefault();
-    if(phase !== "PUZZLE") return;
-
-    const p = puzzles[puzzleIndex] || null;
-    const user = (answerInput.value || "").trim().toUpperCase();
-
-    if(!p || user !== p.answer){
-      fail();
-    } else {
-      success();
-    }
+answerInput.addEventListener("keydown",(e)=>{
+  if(e.key==="Enter"){
+    const p = puzzles[puzzleIndex];
+    if(answerInput.value.trim()===p.answer) success();
+    else fail();
   }
 });
 
-/*********************************************************
- * ✅ 시작
- *********************************************************/
+/* ---------- 시작 ---------- */
 startCity();
 </script>
 </body>
