--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@ const zombieImages = Array.from({length:5},(_,i)=>`static/zombie${i+1}.png`);
 const groanSounds  = Array.from({length:9},(_,i)=>`static/groan${i+1}.mp3`);
 
 const puzzles = [
-  { img:"static/puzzle4-1.png", answer:"1919"},
+  { img:"static/puzzle4-1.png", answer:"1"},
   { img:"static/puzzle4-2.png", answer:"3" },
-  { img:"static/puzzle4-3.png", answer:"호화구의술법" },
-  { img:"static/puzzle4-4.png", answer:"HOT" },
-  { img:"static/puzzle4-5.png", answer:"410" },
-  { img:"static/puzzle4-6.png", answer:"자동차" },
-  { img:"static/puzzle4-7.png", answer:"BITE" }
+  { img:"static/puzzle4-3.png", answer:"4" },
+  { img:"static/puzzle4-4.png", answer:"3" },
+  { img:"static/puzzle4-5.png", answer:"2" },
+  { img:"static/puzzle4-6.png", answer:"4" },
+  { img:"static/puzzle4-7.png", answer:"3" }
 ];
 
 
@@ -859,3 +859,4 @@ requestAnimationFrame(tick);
 </script>
 </body>
 </html>
+
