--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ function warmUp(el, src){
 }
 function pad2(n){ return String(n).padStart(2,'0'); }
 
-/* 한글 자모로 들어와도 영어로 자동 변환(검사용 보너스) */
+/* 한글 자모로 들어와도 영어로 자동 변환 */
 function ko2enQwerty(s){
   const map = {
     'ㅂ':'q','ㅈ':'w','ㄷ':'e','ㄱ':'r','ㅅ':'t','ㅛ':'y','ㅕ':'u','ㅑ':'i','ㅐ':'o','ㅔ':'p',
@@ -291,6 +291,9 @@ const PUZZLE_LIMIT_MS = 20000;
 
 let resultUntilMs = null;
 
+/* ✅ "현재 밤의 (step)에서 이미 한 번 쐈는지" 기록 */
+let lastStepFired = -1;
+
 /* =========================================================
    2분 밤/낮 사이클 + 빨리감기/되감기
    ========================================================= */
@@ -302,6 +305,11 @@ let gameNowMs = 0;
 const CYCLE_LEN_MS = 120000;  // 2분
 let cycleRemainingMs = CYCLE_LEN_MS;
 let cycleMode = "NIGHT";      // NIGHT(진행) / DAY(정지)
+
+/* ✅ 밤 번호(1박,2박...) : "DAY->NIGHT 전환" 때마다 +1
+   - restart 시 0으로 초기화
+   - 각 밤마다 시퀀스가 달라지게 만드는 핵심 */
+let nightIndex = 0;
 
 function isGameActive(){
   return running && cycleMode === "NIGHT" && timeScale !== 0;
@@ -316,31 +324,100 @@ function updateCycleUI(){
 }
 
 /* =========================================================
-   슬롯/사이클(겹침 방지) + 순서 섞기
+   ✅ 새 스케줄: 밤(120초) 동안 0/20/40/60/80/100초에만 좀비 트리거
+   + "restart 직후" / "DAY->NIGHT 직후" 2초 안에 뜨게: STEP_GRACE_MS
    ========================================================= */
-const CYCLE_MS = 80000;
-const SLOT_MS  = 15000;
-const GUARD_MS = 5000;
-const PAGE_ID = 4;
+const NIGHT_LEN_MS     = 120000;
+const STEP_MS          = 20000;
+const STEPS_PER_NIGHT  = 6;
+const STEP_GRACE_MS    = 2000; // ✅ 슬롯 시작 후 2초까지는 그 슬롯로 인정
 
-function makePermutation4(cycleIndex){
-  let a = [0,1,2,3];
-  let seed = ((cycleIndex + 1) * 2654435761) >>> 0;
-  for(let i = a.length - 1; i > 0; i--){
-    seed = (seed * 1664525 + 1013904223) >>> 0;
-    const j = seed % (i + 1);
-    [a[i], a[j]] = [a[j], a[i]];
+const PAGE_ID = 4; // ✅ page1은 1 / page2는 2 / page3는 3 / page4는 4 로만 바꾸면 됨
+
+function rng32(seed){
+  seed = (seed * 1664525 + 1013904223) >>> 0;
+  return seed;
+}
+
+/* ✅ "밤마다" 6개(0/20/40/60/80/100)의 페이지 순서 생성 */
+function makeNightSequence(nIdx){
+  let seed = ((nIdx + 1) * 2654435761) >>> 0;
+  const seq = [];
+  let prev = -1;
+  for(let i=0;i<STEPS_PER_NIGHT;i++){
+    seed = rng32(seed);
+    let pick = (seed % 4) + 1;
+
+    // 뭉침 완화(연속 중복 한번 방지)
+    if(pick === prev){
+      seed = rng32(seed);
+      pick = (seed % 4) + 1;
+      if(pick === prev) pick = (prev % 4) + 1;
+    }
+    seq.push(pick);
+    prev = pick;
   }
-  return a;
+  return seq;
 }
-function getMySlotIndex(cycleIndex){
-  const perm = makePermutation4(cycleIndex);
-  return perm.indexOf(PAGE_ID - 1);
-}
-function seededRandom01(cycleIndex){
-  let x = (cycleIndex + 1) * 1103515245 + PAGE_ID * 12345;
-  x ^= x >>> 16;
-  return (x >>> 0) / 4294967295;
+
+/* ✅ 현재 NIGHT에서 "다음 좀비 트리거" 계산
+   - 핵심 수정:
+     1) triggerAt >= gameNowMs 로 바꿔서 "0초 슬롯"도 안 놓치게
+     2) 슬롯 시작 후 2초 grace 내면, 내 차례면 즉시(now)로 처리 */
+function computeNextZombieAt_fixedSteps(){
+  if(!isGameActive()) return null;
+
+  // NIGHT에서 이미 지난 시간(0~120000)
+  const nightElapsed = NIGHT_LEN_MS - cycleRemainingMs; // 0이면 막 시작한 밤
+  const nightStartMs = gameNowMs - nightElapsed;
+
+  const seq = makeNightSequence(nightIndex);
+
+  // ✅ "지금이 어느 스텝인지" (0~5)
+  const curStep = Math.floor(nightElapsed / STEP_MS);
+  if(curStep >= 0 && curStep < STEPS_PER_NIGHT){
+    const stepStart = curStep * STEP_MS;
+    const sinceStepStart = nightElapsed - stepStart;
+
+    // ✅ 슬롯 시작 후 2초 내 + 내 차례 + 아직 발사 안했으면 => 즉시 트리거
+    if(sinceStepStart <= STEP_GRACE_MS && seq[curStep] === PAGE_ID){
+      const key = nightIndex * 10 + curStep;
+      if(lastStepFired !== key){
+        lastStepFired = key;
+        return gameNowMs; // 즉시
+      }
+    }
+  }
+
+  // ✅ 다음 스텝부터 앞으로 훑어서 내 차례 찾기
+  let nextStep = Math.ceil(nightElapsed / STEP_MS);
+  if(nextStep < 0) nextStep = 0;
+
+  for(let s = nextStep; s < STEPS_PER_NIGHT; s++){
+    if(seq[s] === PAGE_ID){
+      const key = nightIndex * 10 + s;
+      if(lastStepFired === key) continue;
+
+      const triggerAt = nightStartMs + s * STEP_MS; // 0/20/40/...
+      if(triggerAt >= gameNowMs){
+        return triggerAt;
+      }
+    }
+  }
+
+  // 이번 밤에서 내 차례가 더 없으면 => "다음 밤"의 가장 빠른 내 차례
+  // (next night는 DAY 2분 지나고 NIGHT 시작이므로 여기선 예약만 해둠)
+  // 실제로는 DAY때 isGameActive가 false라 tick에서 바로 쓰지 않지만,
+  // NIGHT 들어오면 다시 computeNextZombieAt_fixedSteps()로 재계산됨.
+  const nextNightStart = nightStartMs + (NIGHT_LEN_MS + CYCLE_LEN_MS); // NIGHT(120s)+DAY(120s)=240s
+  const nextSeq = makeNightSequence(nightIndex + 1);
+
+  for(let s = 0; s < STEPS_PER_NIGHT; s++){
+    if(nextSeq[s] === PAGE_ID){
+      return nextNightStart + s * STEP_MS;
+    }
+  }
+  return nextNightStart;
 }
 
 /* =========================================================
@@ -363,7 +440,6 @@ function resetSolvedAll(){
 function setCityByMode(mode){
   const src = (mode === "DAY") ? rand(cityDayImages) : rand(cityNightImages);
   cityImg.src = src;
-  // 정지 화면이 깔끔하게 중앙에 오도록 기본값으로 리셋
   cityImg.style.transform = "translateX(-50%) scale(1.1)";
 }
 
@@ -416,37 +492,15 @@ function stopCityMotion(){
 }
 
 /* =========================================================
-   좀비 스케줄(게임시간 기준)
-   ========================================================= */
-function computeNextZombieAt(){
-  if(!isGameActive()) return null;
-
-  const cycleIndex = Math.floor(gameNowMs / CYCLE_MS);
-  const inCycle = ((gameNowMs % CYCLE_MS) + CYCLE_MS) % CYCLE_MS;
-
-  const mySlot = getMySlotIndex(cycleIndex);
-  const SLOT_START_MS = mySlot * (SLOT_MS + GUARD_MS);
-
-  const r = seededRandom01(cycleIndex);
-  const target = SLOT_START_MS + GUARD_MS + r * (SLOT_MS - GUARD_MS*2);
-
-  let wait = target - inCycle;
-  if(wait < 0) wait += CYCLE_MS;
-
-  return gameNowMs + wait;
-}
-
-/* =========================================================
    상태 전환
    ========================================================= */
 function enterCity(){
   phase = "CITY";
   setUIForPhase();
 
-  // 현재 사이클 모드에 따라 city 이미지 선택
   setCityByMode(cycleMode);
 
-  zombiePendingAt = computeNextZombieAt();
+  zombiePendingAt = computeNextZombieAt_fixedSteps();
   zombieShownAt = null;
   puzzleShownAt = null;
   puzzleLeftMs = 0;
@@ -456,12 +510,10 @@ function enterCity(){
 }
 
 function forceDayCityFreeze(){
-  // ✅ 낮 전환 순간: 퍼즐/좀비 떠 있어도 CITY(낮 이미지)로 강제 복귀
   phase = "CITY";
   setUIForPhase();
   setCityByMode("DAY");
 
-  // 예약/중간값 정리(낮에는 어차피 진행 안 함)
   zombiePendingAt = null;
   zombieShownAt = null;
   puzzleShownAt = null;
@@ -580,6 +632,9 @@ function captureState(){
     cycleRemainingMs,
     cycleMode,
 
+    nightIndex,
+    lastStepFired,
+
     zombieDisplay: zombieImg.style.display,
     puzzleDisplay: puzzleImg.style.display,
     timerDisplay: timerEl.style.display,
@@ -610,6 +665,9 @@ function restoreState(s){
   cycleRemainingMs = s.cycleRemainingMs;
   cycleMode = s.cycleMode;
 
+  nightIndex = s.nightIndex ?? nightIndex;
+  lastStepFired = s.lastStepFired ?? lastStepFired;
+
   setUIForPhase();
   zombieImg.style.display = s.zombieDisplay || zombieImg.style.display;
   puzzleImg.style.display = s.puzzleDisplay || puzzleImg.style.display;
@@ -625,7 +683,6 @@ function restoreState(s){
 
 function pushSnapshot(){
   history.push({ t: gameNowMs, state: captureState() });
-
   const cutoff = gameNowMs - MAX_HISTORY_MS;
   while(history.length && history[0].t < cutoff) history.shift();
 }
@@ -674,22 +731,23 @@ function tick(perfTs){
   if(cycleRemainingMs <= 0){
     while(cycleRemainingMs <= 0) cycleRemainingMs += CYCLE_LEN_MS;
 
-    // 전환
     if(cycleMode === "NIGHT"){
+      // NIGHT -> DAY
       cycleMode = "DAY";
       updateCycleUI();
-
-      // ✅ 낮 전환: 강제 CITY(낮 배경) 고정
       forceDayCityFreeze();
-
     }else{
+      // DAY -> NIGHT
       cycleMode = "NIGHT";
+      nightIndex += 1;                 // ✅ 밤 카운터 증가(중요)
+      lastStepFired = -1;              // ✅ 새 밤 시작이므로 발사기록 초기화(간단/안전)
       updateCycleUI();
 
-      // ✅ 밤 전환: 밤 배경으로 바꾸고(현재 CITY라면 흔들림 재개)
       setCityByMode("NIGHT");
       if(phase === "CITY") startCityMotion();
-      if(phase === "CITY") zombiePendingAt = computeNextZombieAt();
+
+      // ✅ "낮에서 밤으로 넘어오면 2초 안에"도 여기서 바로 계산(필요시 즉시 발사됨)
+      if(phase === "CITY") zombiePendingAt = computeNextZombieAt_fixedSteps();
     }
   }else{
     updateCycleUI();
@@ -707,13 +765,14 @@ function tick(perfTs){
 
   // CITY
   if(phase === "CITY"){
-    if(zombiePendingAt == null) zombiePendingAt = computeNextZombieAt();
+    if(zombiePendingAt == null) zombiePendingAt = computeNextZombieAt_fixedSteps();
     if(zombiePendingAt != null && gameNowMs >= zombiePendingAt){
+      zombiePendingAt = null; // ✅ 중복 방지
       enterZombie();
     }
   }
 
-  // ZOMBIE: 2초 후 퍼즐
+  // ZOMBIE: 2초 후 퍼즐(요구대로 유지)
   if(phase === "ZOMBIE"){
     if(zombieShownAt != null && gameNowMs - zombieShownAt >= 2000){
       enterPuzzle();
@@ -731,7 +790,7 @@ function tick(perfTs){
     }
   }
 
-  // RESULT: 3초 후 CITY 복귀(현재 cycleMode에 맞는 배경으로)
+  // RESULT: 3초 후 CITY 복귀
   if(phase === "RESULT"){
     if(resultUntilMs != null && gameNowMs >= resultUntilMs){
       resultUntilMs = null;
@@ -791,11 +850,15 @@ function hardResetGame(){
   cycleRemainingMs = CYCLE_LEN_MS;
   updateCycleUI();
 
+  // ✅ restart 시 밤번호 0부터 (여기서 바로 0초 슬롯을 "2초 grace"로 잡음)
+  nightIndex = 0;
+  lastStepFired = -1;
+
   gameNowMs = 0;
   history = [];
   lastSnapAt = 0;
 
-  enterCity();
+  enterCity(); // enterCity 내부에서 computeNextZombieAt_fixedSteps() 수행(즉시 트리거 가능)
   pushSnapshot();
   lastSnapAt = gameNowMs;
 }
@@ -816,18 +879,16 @@ function show(id){
   }
 
   if(id === "toggle"){
-    // ✅ 멈추기
+    // 멈추기
     if(running){
       running = false;
       stopCityMotion();
       return;
     }
-
-    // ✅ 재개하기: 항상 정속(1배)로 복귀
+    // 재개: 정속
     timeScale = 1;
     running = true;
     lastPerfTs = 0;
-
     if(phase === "CITY" && cycleMode === "NIGHT") startCityMotion();
     return;
   }
@@ -859,4 +920,3 @@ requestAnimationFrame(tick);
 </script>
 </body>
 </html>
-
