--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ input{
   text-align:center;
 }
 
-/* ✅ 상단 컨트롤: [다시시작] [스톱워치 + 밤/낮] [▶/II][>>][정속][<<] */
+/* ✅ 상단 컨트롤 */
 .controls{
   width:1024px;
   max-width:92vw;
@@ -176,7 +176,6 @@ button:active{ transform: translateY(1px); }
     </div>
 
     <div class="ctrlRight">
-      <!-- (유지) ▶/II = Tab과 동일하게 밤/낮 토글 -->
       <button onclick="show('toggle')">▶/ II</button>
       <button onclick="show('ff')">앞으로 빨리감기</button>
       <button onclick="show('normal')">정속감기</button>
@@ -208,9 +207,10 @@ button:active{ transform: translateY(1px); }
 
   <div class="note">
     * 시작은 밤(재생) 상태.
-    <br>* <b>0</b>: (밤+CITY일 때만) 좀비 소환.
-    <br>* 좀비 뜨면 5초 카운트다운 → Space를 눌러야 퍼즐 진입(20초). 5초 초과 시 데미지.
-    <br>* <b>9</b>: 좀비/퍼즐/결과 중 “강제 취소” → 밤 CITY로 즉시 복귀 (해당 좀비/문제는 스킵되지 않음, 0을 누르면 다시 시작)
+    <br>* <b>0</b>: (밤+CITY일 때만) <b>zombie1~5</b> 중 랜덤 소환
+    <br>* <b>-</b>: (밤+CITY일 때만) <b>zombie6~8</b> 중 랜덤 소환
+    <br>* 좀비 뜨면 5초 카운트다운 → Space를 눌러야 퍼즐 진입(20초). (단 zombie6~8은 Space 즉시 fail2)
+    <br>* <b>9</b>: 좀비/퍼즐/결과 중 “강제 취소” → 밤 CITY로 즉시 복귀 (스킵 안 됨)
     <br>* Tab: 밤(재생) ↔ 낮(정지) 수동 전환(낮으로 들어가면 CITY로 강제 복귀)
   </div>
 
@@ -228,8 +228,11 @@ button:active{ transform: translateY(1px); }
 const cityNightImages = Array.from({length:5},(_,i)=>`static/city${i+1}.png`);
 const cityDayImages   = Array.from({length:5},(_,i)=>`static/city-day${i+1}.png`);
 
-const zombieImages = Array.from({length:8},(_,i)=>`static/zombie${i+1}.png`);
-const groanSounds  = Array.from({length:9},(_,i)=>`static/groan${i+1}.mp3`);
+/* ✅ 분리: 일반 좀비(1~5) / 특수 좀비(6~8) */
+const zombieNormal = Array.from({length:5},(_,i)=>`static/zombie${i+1}.png`);
+const zombieSpecial = Array.from({length:3},(_,i)=>`static/zombie${i+6}.png`);
+
+const groanSounds  = Array.from({length:5},(_,i)=>`static/groan${i+1}.mp3`);
 
 const puzzles = [
   { img:"static/puzzle4-1.png", answer:"1"},
@@ -240,7 +243,6 @@ const puzzles = [
   { img:"static/puzzle4-6.png", answer:"4" },
   { img:"static/puzzle4-7.png", answer:"3" }
 ];
-
 
 /* =========================================================
    DOM
@@ -289,7 +291,7 @@ function warmUp(el, src){
 function pad2(n){ return String(n).padStart(2,'0'); }
 function formatStopwatch(ms){
   ms = Math.max(0, ms);
-  const totalCs = Math.floor(ms / 10);       // centiseconds
+  const totalCs = Math.floor(ms / 10);
   const cs = totalCs % 100;
   const totalSec = Math.floor(totalCs / 100);
   const s = totalSec % 60;
@@ -330,7 +332,7 @@ let cityT0 = 0;
 
 let zombieShownAt = null;
 
-let zombieWaitMs = 0;                 // ✅ 좀비 5초 대기
+let zombieWaitMs = 0;
 const ZOMBIE_WAIT_LIMIT_MS = 5000;
 
 let puzzleLeftMs = 0;
@@ -338,23 +340,22 @@ const PUZZLE_LIMIT_MS = 20000;
 
 let resultUntilMs = null;
 
-/* ✅ 이번에 뽑힌 좀비가 zombie6/7/8인지 체크용 */
-let currentZombieSrc = "";
-let isVanishZombie = false; // zombie6~8이면 true
-
-function computeIsVanishZombie(src){
-  return /zombie(6|7|8)\.png$/i.test(src || "");
+/* ✅ 현재 좀비 타입/번호 */
+let currentZombieNum = null;     // 1~8
+let currentZombieType = "NORMAL"; // NORMAL | SPECIAL
+function isSpecialZombie(){
+  return currentZombieType === "SPECIAL";
 }
 
 /* =========================================================
-   실행/정지 + 스케일 + 밤/낮(수동)
+   실행/정지 + 밤/낮
    ========================================================= */
-let running = true;      // ✅ 시작부터 엔진 구동
+let running = true;
 let timeScale = 1;       // 1, 10, -10 (DAY에서는 0처럼 동작)
 let lastPerfTs = 0;
 let gameNowMs = 0;
 
-let mode = "NIGHT";      // NIGHT(재생) / DAY(정지)
+let mode = "NIGHT";      // NIGHT / DAY
 
 function isGameActive(){
   return running && mode === "NIGHT" && timeScale !== 0;
@@ -379,7 +380,7 @@ function resetSolvedAll(){
 }
 
 /* =========================================================
-   CITY 이미지: 밤/낮 모드에 따라
+   CITY 이미지
    ========================================================= */
 function setCityByMode(m){
   const src = (m === "DAY") ? rand(cityDayImages) : rand(cityNightImages);
@@ -401,7 +402,7 @@ function setUIForPhase(){
   }else if(phase === "ZOMBIE"){
     zombieImg.style.display = "block";
     puzzleImg.style.display = "none";
-    timerEl.style.display = "block";     // ✅ 5초 카운트다운 표시
+    timerEl.style.display = "block";
     answerRow.style.display = "none";
   }else if(phase === "PUZZLE"){
     zombieImg.style.display = "block";
@@ -451,9 +452,8 @@ function enterCity(){
   puzzleLeftMs = 0;
   resultUntilMs = null;
 
-  // ✅ 좀비 특수 플래그 초기화
-  currentZombieSrc = "";
-  isVanishZombie = false;
+  currentZombieNum = null;
+  currentZombieType = "NORMAL";
 
   if(isGameActive()) startCityMotion();
   else stopCityMotion();
@@ -463,7 +463,7 @@ function forceDayFreeze(){
   mode = "DAY";
   timeScale = 0;
 
-  cancelEncounterToCity({ keepModeNight:false }); // DAY로 갈 거라서 밤 강제 안 함
+  cancelEncounterToCity({ keepModeNight:false });
   setCityByMode("DAY");
   updateTopUI();
 }
@@ -475,20 +475,21 @@ function resumeNightFromDay(){
 
   phase = "CITY";
   setUIForPhase();
+
   zombieShownAt = null;
   zombieWaitMs = 0;
   puzzleLeftMs = 0;
   resultUntilMs = null;
 
-  currentZombieSrc = "";
-  isVanishZombie = false;
+  currentZombieNum = null;
+  currentZombieType = "NORMAL";
 
   if(isGameActive()) startCityMotion();
   updateTopUI();
 }
 
-function enterZombie(){
-  // ✅ 좀비는 이제 자동이 아니라 "0"으로만 들어온다.
+/* ✅ (요구) 타입을 지정해서 소환 */
+function enterZombieWithType(type){
   if(!isGameActive()) return;
   if(phase !== "CITY") return;
 
@@ -496,21 +497,20 @@ function enterZombie(){
   setUIForPhase();
   stopCityMotion();
 
-  // ✅ 이번 좀비 뽑기 + 특수 좀비(6~8) 여부 저장
-  currentZombieSrc = rand(zombieImages);
-  isVanishZombie = computeIsVanishZombie(currentZombieSrc);
+  currentZombieType = (type === "SPECIAL") ? "SPECIAL" : "NORMAL";
 
-  zombieImg.src = currentZombieSrc;
+  const zSrc = (currentZombieType === "SPECIAL") ? rand(zombieSpecial) : rand(zombieNormal);
+  zombieImg.src = zSrc;
   zombieImg.style.display = "block";
 
-  // ✅ zombie6/7/8이면 "소리 없이" 5초 후 사라져야 하므로 groan 재생 안 함
-  if(!isVanishZombie){
-    playSound(groanEl, rand(groanSounds));
-  }
+  const m = /zombie(\d+)\.png$/i.exec(zSrc);
+  currentZombieNum = m ? parseInt(m[1], 10) : null;
+
+  // groan 랜덤 유지
+  playSound(groanEl, rand(groanSounds));
 
   zombieShownAt = gameNowMs;
 
-  // ✅ 5초 카운트다운 시작
   zombieWaitMs = ZOMBIE_WAIT_LIMIT_MS;
   timerEl.textContent = "5";
 }
@@ -554,34 +554,12 @@ function enterResult(imgSrc, soundType, msgText){
   }
 }
 
-/* ✅ 특수 좀비(6/7/8) : 5초 지나면 아무 효과 없이 사라지고 CITY로 복귀 */
-function vanishZombieToCity(){
-  // 오디오도 "없어야" 하므로 전부 정지
-  stopAllSfx();
-
-  // 진행 변수 초기화
-  zombieShownAt = null;
-  zombieWaitMs = 0;
-  puzzleLeftMs = 0;
-  resultUntilMs = null;
-
-  // 플래그 초기화
-  currentZombieSrc = "";
-  isVanishZombie = false;
-
-  // CITY 복귀(밤 유지)
-  phase = "CITY";
-  setUIForPhase();
-  setCityByMode(mode);
-  if(isGameActive()) startCityMotion();
-  else stopCityMotion();
-
-  updateTopUI();
+/* ✅ SPECIAL(zombie6~8): Space 즉시 fail2 */
+function doInstantFail2(){
+  enterResult("static/fail2.png", "FAIL", "");
+  resultUntilMs = gameNowMs + 20000; // 여기 숫자(ms) 바꾸면 fail2 유지시간 조절됨
 }
 
-/* ✅ 9번: 지금 진행 중인 좀비/퍼즐/결과를 “취소”하고 CITY로 즉시 복귀
-   - puzzleIndex/solved 상태 변경 없음 (즉, 스킵되지 않음)
-   - 0을 다시 누르면 동일 흐름으로 다시 시작 가능 */
 function cancelEncounterToCity({ keepModeNight=true } = {}){
   if(keepModeNight){
     mode = "NIGHT";
@@ -593,9 +571,8 @@ function cancelEncounterToCity({ keepModeNight=true } = {}){
   puzzleLeftMs = 0;
   resultUntilMs = null;
 
-  // ✅ 특수 좀비도 취소 시 플래그 초기화
-  currentZombieSrc = "";
-  isVanishZombie = false;
+  currentZombieNum = null;
+  currentZombieType = "NORMAL";
 
   stopAllSfx();
   answerInput.value = "";
@@ -633,25 +610,9 @@ function doFail(){
   puzzleIndex = (puzzleIndex + 1) % puzzles.length;
   resultUntilMs = gameNowMs + 3000;
 }
-
-/* 기존 데미지: 일반 좀비에서만 사용 */
 function doDamage(){
   enterResult("static/fail.png", "FAIL");
   resultUntilMs = gameNowMs + 3000;
-}
-
-/* ✅ 특수 좀비(6/7/8)에서 Space 누르면:
-   - 퍼즐 없이 즉시 오답 처리
-   - scratch.mp3 + fail2.png */
-function doInstantFailForVanishZombie(){
-  // 어떤 효과(sound.mp3, fail.png 등) 없이 "fail2"만
-  stopAllSfx();
-  enterResult("static/fail2.png", "FAIL", "");
-  // 다음 좀비/문제 스킵 안 한다는 요구와 충돌 방지:
-  // puzzleIndex/solved 건드리지 않음
-  resultUntilMs = gameNowMs + 20000;
-
-  // 특수 좀비 플래그는 결과 후 CITY로 돌아갈 때 enterCity에서 초기화됨
 }
 
 /* =========================================================
@@ -692,9 +653,8 @@ function captureState(){
     msgShown: msgEl.classList.contains("show"),
     msgText: msgEl.textContent || "",
 
-    // ✅ 추가: 특수 좀비 상태도 되감기에서 유지
-    currentZombieSrc,
-    isVanishZombie
+    currentZombieNum,
+    currentZombieType
   };
 }
 
@@ -719,8 +679,8 @@ function restoreState(s){
   mode = s.mode;
   timeScale = s.timeScale;
 
-  currentZombieSrc = s.currentZombieSrc || "";
-  isVanishZombie = !!s.isVanishZombie;
+  currentZombieNum = (s.currentZombieNum == null) ? null : s.currentZombieNum;
+  currentZombieType = s.currentZombieType || "NORMAL";
 
   setUIForPhase();
   zombieImg.style.display = s.zombieDisplay || zombieImg.style.display;
@@ -768,7 +728,7 @@ function tick(perfTs){
   const realDt = perfTs - lastPerfTs;
   lastPerfTs = perfTs;
 
-  // DAY면 시간 정지(스톱워치도 멈춤)
+  // DAY면 시간 정지
   if(mode === "DAY"){
     timeScale = 0;
     updateTopUI();
@@ -780,7 +740,6 @@ function tick(perfTs){
     return;
   }
 
-  // NIGHT
   const dt = realDt * timeScale;
 
   // 되감기(-10)
@@ -800,24 +759,24 @@ function tick(perfTs){
   gameNowMs += dt;
   updateTopUI();
 
-  // ✅ ZOMBIE: 5초 카운트다운
+  // ZOMBIE: 5초
   if(phase === "ZOMBIE"){
     zombieWaitMs -= dt;
     zombieWaitMs = Math.max(0, zombieWaitMs);
     timerEl.textContent = String(Math.ceil(zombieWaitMs / 1000));
 
     if(zombieWaitMs <= 0){
-      // ✅ zombie6/7/8이면 "아무 효과 없이" 사라짐
-      if(isVanishZombie){
-        vanishZombieToCity();
+      if(isSpecialZombie()){
+        // ✅ zombie6~8: 아무 효과 없이 사라짐
+        enterCity();
       }else{
-        // 일반 좀비는 기존처럼 데미지
+        // ✅ zombie1~5: 기존 데미지
         doDamage();
       }
     }
   }
 
-  // PUZZLE: 20초 카운트다운
+  // PUZZLE: 20초
   if(phase === "PUZZLE"){
     puzzleLeftMs -= dt;
     puzzleLeftMs = Math.max(0, puzzleLeftMs);
@@ -828,7 +787,7 @@ function tick(perfTs){
     }
   }
 
-  // RESULT: 3초 후 CITY 복귀
+  // RESULT: 종료 시 CITY
   if(phase === "RESULT"){
     if(resultUntilMs != null && gameNowMs >= resultUntilMs){
       resultUntilMs = null;
@@ -846,7 +805,7 @@ function tick(perfTs){
 }
 
 /* =========================================================
-   입력 (정답, Space, Tab, 0, 9)
+   입력
    ========================================================= */
 answerInput.addEventListener("input", ()=>{
   answerInput.value = answerInput.value.toUpperCase();
@@ -866,25 +825,34 @@ answerInput.addEventListener("keydown", (e)=>{
   else doFail();
 });
 
-// ✅ 전역 키 입력
 window.addEventListener("keydown", (e)=>{
-  // Tab = 밤/낮 토글(언제든)
+  // Tab 토글
   if(e.key === "Tab"){
     e.preventDefault();
     show("toggle");
     return;
   }
 
-  // 0 = 좀비 소환(밤 + CITY일 때만)
+  // ✅ 0 = 일반좀비(1~5)
   if(e.key === "0"){
     e.preventDefault();
     if(isGameActive() && phase === "CITY"){
-      enterZombie();
+      enterZombieWithType("NORMAL");
     }
     return;
   }
 
-  // 9 = 강제 취소(좀비/퍼즐/결과 중)
+  // ✅ '-' = 특수좀비(6~8)
+  // (키보드 위치/레이아웃에 따라 e.key가 '-' 또는 'Minus'일 수 있어 둘 다 처리)
+  if(e.key === "-" || e.code === "Minus"){
+    e.preventDefault();
+    if(isGameActive() && phase === "CITY"){
+      enterZombieWithType("SPECIAL");
+    }
+    return;
+  }
+
+  // 9 = 취소
   if(e.key === "9"){
     if(phase === "ZOMBIE" || phase === "PUZZLE" || phase === "RESULT"){
       e.preventDefault();
@@ -895,15 +863,13 @@ window.addEventListener("keydown", (e)=>{
 
   // Space
   if(e.code === "Space"){
-    // ✅ ZOMBIE에서:
-    // - zombie6/7/8이면 퍼즐 없이 즉시 오답 처리(fail2)
-    // - 나머지는 기존처럼 퍼즐 진입
     if(phase === "ZOMBIE" && isGameActive()){
       e.preventDefault();
-
-      if(isVanishZombie){
-        doInstantFailForVanishZombie();
+      if(isSpecialZombie()){
+        // ✅ zombie6~8만 즉시 fail2
+        doInstantFail2();
       }else{
+        // ✅ zombie1~5는 퍼즐로
         enterPuzzle();
       }
       return;
@@ -927,10 +893,9 @@ function hardResetGame(){
   puzzleLeftMs = 0;
   resultUntilMs = null;
 
-  currentZombieSrc = "";
-  isVanishZombie = false;
+  currentZombieNum = null;
+  currentZombieType = "NORMAL";
 
-  // 시작은 밤(재생)
   mode = "NIGHT";
   timeScale = 1;
 
@@ -959,14 +924,12 @@ function show(id){
   }
 
   if(id === "toggle"){
-    // 밤/낮 토글
     if(mode === "NIGHT"){
       forceDayFreeze();
       pushSnapshot();
       lastSnapAt = gameNowMs;
       return;
     }else{
-      // DAY -> NIGHT 재개(정속)
       lastPerfTs = 0;
       resumeNightFromDay();
       pushSnapshot();
@@ -1001,7 +964,7 @@ function show(id){
 }
 
 /* =========================================================
-   초기: 시작부터 밤(재생) CITY
+   초기
    ========================================================= */
 updateTopUI();
 enterCity();
